--- a/index.html
+++ b/index.html
@@ -745,19 +745,6 @@
                     }
                 </script>
             </div>
-
-            <!-- Alternative Order Methods -->
-            <div class="text-center mt-8" data-aos="fade-up">
-                <p class="text-gray-600 mb-4">Atau pesan melalui WhatsApp:</p>
-                <a href="https://wa.me/6281234567890?text=Halo%20saya%20mau%20pesan%20Drawstring%20High-Waisted%20Straight-Leg%20Pants" 
-                   class="inline-flex items-center bg-green-500 text-white px-8 py-3 rounded-full font-semibold hover:bg-green-600 transition">
-                    <i class="fab fa-whatsapp mr-2 text-xl"></i>
-                    Pesan via WhatsApp
-                </a>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -835,10 +822,10 @@
             }, 1500);
         });
 
-        // Countdown Timer
+        // Countdown Timer (1 jam dari sekarang)
         function updateCountdown() {
             const endDate = new Date();
-            endDate.setDate(endDate.getDate() + 3); // 3 days from now
+            endDate.setHours(endDate.getHours() + 1); // 1 jam dari sekarang
             
             const now = new Date().getTime();
             const distance = endDate.getTime() - now;
